crates/libs/frieze-macros/tests/ui/union_not_supported.stderr
error: frieze: #[derive(Schema)] does not support unions.
 --> tests/ui/union_not_supported.rs:4:7
  |
4 | union U {
  |       ^
