crates/libs/frieze-macros/tests/ui/union_not_supported.rs
use frieze::Schema;

#[derive(Schema)]
union U {
    a: i64,
    b: i64,
}

fn main() {}
